--- a/index.html
+++ b/index.html
@@ -5,160 +5,213 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <meta name="author" content="Daniela Yevenes Zagal" />
       <title>Daniela Y. Zagal - CV</title>
+      <link
+         rel="stylesheet"
+         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+      <link rel="stylesheet" href="style.css" />
+      <script
+         src="https://kit.fontawesome.com/a14db3a8ab.js"
+         crossorigin="anonymous"></script>
    </head>
    <body>
-      <header>
-         <img
-            src="image/danielayzagal-cv-pic.jpg"
-            alt="Daniela Yevenes Zagal CV picture" />
-         <h1>Daniela Yevenes Zagal</h1>
-         <p><q>Be yourself, everyone else is taken</q> - Oscar Wilde</p>
-      </header>
-      <main>
-         <hr />
-         <section>
-            <h3>Contact details</h3>
-            <p>
-               Adress: Kläppvägen 5, 904 21 Umeå <br />E-mail:
-               <a href="mailto:daniela.yeveneszagal@gmail.com"
-                  >daniela.yeveneszagal@gmail.com</a
-               >
-               <br />Mobile number: +46 707 5198 55 <br />Webpage:
-               <a href="#">Daniela Y. Zagal</a> <br />Social Media:
-               <a href="#">LinkedIn</a>
-            </p>
-         </section>
-         <article>
-            <hr />
-            <h2>CV</h2>
-            <section>
-               <h3>Education</h3>
-               <!-- I chose not to style the table element with style attributes like 'width' or 'height' to give ir more space between the columns, 
-                since it's considered best practice to style it seperatly with CSS. -->
-               <table>
-                  <thead>
-                     <tr>
-                        <th>Year</th>
-                        <th>School, location</th>
-                        <th>Degree title</th>
-                     </tr>
-                  </thead>
-                  <tbody>
-                     <tr>
-                        <td>2007-2010</td>
-                        <td>Beckmans School of Design, Stockholm</td>
-                        <td>BFA, Product- and Interior Design</td>
-                     </tr>
-                     <tr>
-                        <td>2005-2006</td>
-                        <td>London Metropolitan University, London</td>
-                        <td>
-                           Foundation into Architecture and Interior Design
-                        </td>
-                     </tr>
-                     <tr>
-                        <td>2006</td>
-                        <td>Stockholms University, Stockholm</td>
-                        <td>Fashion Studies</td>
-                     </tr>
-                     <tr>
-                        <td>2004-2005</td>
-                        <td>Stockholms Univerity, Stockholm</td>
-                        <td>Art History</td>
-                     </tr>
-                     <tr>
-                        <td>2005</td>
-                        <td>Folkuniversitetet, Stockholm</td>
-                        <td>Inredningslinjen</td>
-                     </tr>
-                  </tbody>
-               </table>
-            </section>
-            <section>
-               <h3>Employment History</h3>
-               <table>
-                  <thead>
-                     <tr>
-                        <th>Year</th>
-                        <th>Workplace, location</th>
-                        <th>Job title</th>
-                     </tr>
-                  </thead>
-                  <tbody>
-                     <tr>
-                        <td>2022-2023</td>
-                        <td>IKEA, Umeå</td>
-                        <td>Business Interior Designer</td>
-                     </tr>
-                     <tr>
-                        <td>2017</td>
-                        <td>IKEA Nagakute, Japan</td>
-                        <td>Interior Designer</td>
-                     </tr>
-                     <tr>
-                        <td>2015-2022</td>
-                        <td>IKEA, Umeå</td>
-                        <td>Interior Designer</td>
-                     </tr>
-                     <tr>
-                        <td>2013-2015</td>
-                        <td>IKEA Kungens Kurva, Stockholm</td>
-                        <td>Sales Associate</td>
-                     </tr>
-                     <tr>
-                        <td>2013-2014</td>
-                        <td>Design Lab S, Stockholm</td>
-                        <td>Desing Assistant</td>
-                     </tr>
-                     <tr>
-                        <td>2006-2012</td>
-                        <td>Urban Outfitters, Stockholm</td>
-                        <td>Sales Associate</td>
-                     </tr>
-                     <tr>
-                        <td>2011-2014</td>
-                        <td>Why Design Matters - Design Studio, Stockholm</td>
-                        <td>Freelance</td>
-                     </tr>
-                     <tr>
-                        <td>2005</td>
-                        <td>Harrods, London</td>
-                        <td>Sales Associate</td>
-                     </tr>
-                  </tbody>
-               </table>
-            </section>
-            <section>
-               <h3>Computer Skills</h3>
+      <div class="wrapper">
+         <header>
+            <p class="logo">Daniela Y. Zagal</p>
+            <nav>
                <ul>
-                  <li>Windows 365</li>
-                  <li>OS/MAC</li>
-                  <li>Revit</li>
-                  <li>AutoCAD</li>
-                  <li>Adobe; Photoshop, Illustrator, InDesign</li>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Blog</a></li>
                </ul>
-            </section>
-            <section>
-               <h3>Language skill</h3>
-               <ul>
-                  <li>Swedish (Fluent)</li>
-                  <li>English (Fluent)</li>
-                  <li>Spanish (Native)</li>
-               </ul>
-            </section>
-            <section>
-               <h3>References</h3>
-               <p>Available on request.</p>
-            </section>
-            <section>
-               <h3>Additional information</h3>
-               <p>B - Driving Licence</p>
-            </section>
-         </article>
-      </main>
-      <footer>
-         <hr />
-         <p>© Daniela Y. Zagal 2024</p>
-      </footer>
+            </nav>
+         </header>
+         <main>
+            <div class="content">
+               <div class="sec1">
+                  <img
+                     class="profile-pic"
+                     src="image/danielayzagal-cv-pic.jpg"
+                     alt="Daniela Yevenes Zagal CV picture" />
+                  <section>
+                     <h1>Daniela Y. Zagal</h1>
+                  </section>
+               </div>
+               <div class="sec2">
+                  <section>
+                     <h3 id="contact">Contact details</h3>
+                     <p>
+                        <i class="fa-solid fa-location-dot"></i> Kläppvägen 5,
+                        904 21 Umeå
+                        <br />
+                        <i class="fa-solid fa-envelope"></i>
+                        <a href="mailto:daniela.yeveneszagal@gmail.com"
+                           >daniela.yeveneszagal@gmail.com</a
+                        >
+                        <br /><i class="fa-solid fa-mobile-screen-button"></i>
+                        +46 707 5198 55 <br />
+                        <i class="fa-solid fa-house"></i>
+                        <a href="#" target="_blank">www.daayz.com</a> <br /><i
+                           class="fa-brands fa-linkedin"></i>
+                        <a href="#">daniela-y-z</a> <br /><i
+                           class="fa-brands fa-github"></i>
+                        <a href="#">danielaayz</a>
+                     </p>
+                  </section>
+                  <section>
+                     <h3>About me</h3>
+                     <p>
+                        Hi, I'm Daniela Y. Zagal. I'm a Swedish based front-end
+                        developer in the making. <br />I have a background in
+                        product and interior design with over 10 years of
+                        experience.
+                     </p>
+                     <p>
+                        I consider myself a creative, open minded and proactive
+                        person. <br />I love a new challenge and opportunities
+                        to form connections.
+                     </p>
+                  </section>
+               </div>
+               <article>
+                  <h2>CURRICULUM VITAE</h2>
+                  <section>
+                     <h3>Education</h3>
+                     <!-- Table -->
+                     <table>
+                        <thead>
+                           <tr>
+                              <th>Year</th>
+                              <th>School, location</th>
+                              <th>Degree title</th>
+                           </tr>
+                        </thead>
+                        <tbody>
+                           <tr>
+                              <td>2007-2010</td>
+                              <td>Beckmans School of Design, Stockholm</td>
+                              <td>BFA, Product- and Interior Design</td>
+                           </tr>
+                           <tr>
+                              <td>2005-2006</td>
+                              <td>London Metropolitan University, London</td>
+                              <td>
+                                 Foundation into Architecture and Interior
+                                 Design
+                              </td>
+                           </tr>
+                           <tr>
+                              <td>2006</td>
+                              <td>Stockholms University, Stockholm</td>
+                              <td>Fashion Studies</td>
+                           </tr>
+                           <tr>
+                              <td>2004-2005</td>
+                              <td>Stockholms Univerity, Stockholm</td>
+                              <td>Art History</td>
+                           </tr>
+                           <tr>
+                              <td>2005</td>
+                              <td>Folkuniversitetet, Stockholm</td>
+                              <td>Inredningslinjen</td>
+                           </tr>
+                        </tbody>
+                     </table>
+                     <!-- End Table -->
+                  </section>
+                  <section>
+                     <h3>Employment History</h3>
+                     <!-- Table -->
+                     <table>
+                        <thead>
+                           <tr>
+                              <th>Year</th>
+                              <th>Workplace, location</th>
+                              <th>Job title</th>
+                           </tr>
+                        </thead>
+                        <tbody>
+                           <tr>
+                              <td>2022-2023</td>
+                              <td>IKEA, Umeå</td>
+                              <td>Business Interior Designer</td>
+                           </tr>
+                           <tr>
+                              <td>2017</td>
+                              <td>IKEA Nagakute, Japan</td>
+                              <td>Interior Designer</td>
+                           </tr>
+                           <tr>
+                              <td>2015-2022</td>
+                              <td>IKEA, Umeå</td>
+                              <td>Interior Designer</td>
+                           </tr>
+                           <tr>
+                              <td>2013-2015</td>
+                              <td>IKEA Kungens Kurva, Stockholm</td>
+                              <td>Sales Associate</td>
+                           </tr>
+                           <tr>
+                              <td>2013-2014</td>
+                              <td>Design Lab S, Stockholm</td>
+                              <td>Desing Assistant</td>
+                           </tr>
+                           <tr>
+                              <td>2006-2012</td>
+                              <td>Urban Outfitters, Stockholm</td>
+                              <td>Sales Associate</td>
+                           </tr>
+                           <tr>
+                              <td>2011-2014</td>
+                              <td>
+                                 Why Design Matters - Design Studio, Stockholm
+                              </td>
+                              <td>Freelance</td>
+                           </tr>
+                           <tr>
+                              <td>2005</td>
+                              <td>Harrods, London</td>
+                              <td>Sales Associate</td>
+                           </tr>
+                        </tbody>
+                     </table>
+                     <!-- End Table -->
+                  </section>
+                  <section>
+                     <h3>Computer Skills</h3>
+                     <ul>
+                        <li>Windows 365</li>
+                        <li>OS/MAC</li>
+                        <li>HTML5</li>
+                        <li>CSS</li>
+                        <li>VS Code</li>
+                        <li>Git</li>
+                        <li>Revit</li>
+                        <li>AutoCAD</li>
+                        <li>Adobe; Photoshop, Illustrator, InDesign</li>
+                     </ul>
+                  </section>
+                  <section>
+                     <h3>Language skill</h3>
+                     <ul>
+                        <li>Swedish (Fluent)</li>
+                        <li>English (Fluent)</li>
+                        <li>Spanish (Native)</li>
+                     </ul>
+                  </section>
+                  <section>
+                     <h3>References</h3>
+                     <p>Available on request.</p>
+                  </section>
+                  <section>
+                     <h3>Additional information</h3>
+                     <p>B - Driving Licence</p>
+                  </section>
+               </article>
+            </div>
+         </main>
+         <footer>
+            <p>© Daniela Y. Zagal 2024</p>
+         </footer>
+      </div>
    </body>
 </html>
